# decompiler-bitcoin-script

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run-decompiler.sh
includes/bitcoinlib/: base58.cpp
src/: main.cpp  opcode.h  opcode.hpp  strencodings.hpp
